add MaxPermSize parameter for sbt processes by default only when JDK <= 7 is detected or when user adds it explicitely. Remove from default sbt settings. #SCL-13327 fixed